--- a/tests/test_cases/2018/commands/7E0.0131.yaml
+++ b/tests/test_cases/2018/commands/7E0.0131.yaml
@@ -32,3 +32,15 @@ test_cases:
 - response: 7E804413121A2
   expected_values:
     CLR_DIST: 8610
+- response: 7E804413121AE
+  expected_values:
+    CLR_DIST: 8622
+- response: 7E804413121AF
+  expected_values:
+    CLR_DIST: 8623
+- response: 7E804413121B8
+  expected_values:
+    CLR_DIST: 8632
+- response: 7E804413121B9
+  expected_values:
+    CLR_DIST: 8633
