--- a/tests/test_cases/2024/commands/710.77A.222AB6.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB6.yaml
@@ -6,179 +6,274 @@ test_cases:
     77A100A622AB6005500
     77A215507FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 85
+    VOLKSWAGEN_RANGE_V2: 85
 - response: |-
     77A100A622AB6005A00
     77A215A07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 90
+    VOLKSWAGEN_RANGE_V2: 90
 - response: |-
     77A100A622AB6006400
     77A216407FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 100
+    VOLKSWAGEN_RANGE_V2: 100
 - response: |-
     77A100A622AB6006900
     77A216907FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 105
+    VOLKSWAGEN_RANGE_V2: 105
 - response: |-
     77A100A622AB6006E00
     77A216E07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 110
+    VOLKSWAGEN_RANGE_V2: 110
 - response: |-
     77A100A622AB6007300
     77A217307FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 115
+    VOLKSWAGEN_RANGE_V2: 115
 - response: |-
     77A100A622AB6007800
     77A217807FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 120
+    VOLKSWAGEN_RANGE_V2: 120
 - response: |-
     77A100A622AB6007D00
     77A217D07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 125
+    VOLKSWAGEN_RANGE_V2: 125
 - response: |-
     77A100A622AB6008200
     77A218207FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 130
+    VOLKSWAGEN_RANGE_V2: 130
 - response: |-
     77A100A622AB6008700
     77A218707FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 135
+    VOLKSWAGEN_RANGE_V2: 135
 - response: |-
     77A100A622AB6008C00
     77A218C07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 140
+    VOLKSWAGEN_RANGE_V2: 140
 - response: |-
     77A100A622AB6009100
     77A219107FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 145
+    VOLKSWAGEN_RANGE_V2: 145
 - response: |-
     77A100A622AB6009600
     77A219607FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 150
+    VOLKSWAGEN_RANGE_V2: 150
 - response: |-
     77A100A622AB6009B00
     77A219B07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 155
+    VOLKSWAGEN_RANGE_V2: 155
 - response: |-
     77A100A622AB600A000
     77A21A007FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 160
+    VOLKSWAGEN_RANGE_V2: 160
 - response: |-
     77A100A622AB600AA00
     77A21AA07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 170
+    VOLKSWAGEN_RANGE_V2: 170
 - response: |-
     77A100A622AB600AF00
     77A21AF07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 175
+    VOLKSWAGEN_RANGE_V2: 175
 - response: |-
     77A100A622AB600B400
     77A21B407FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 180
+    VOLKSWAGEN_RANGE_V2: 180
 - response: |-
     77A100A622AB600B900
     77A21B907FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 185
+    VOLKSWAGEN_RANGE_V2: 185
 - response: |-
     77A100A622AB600C300
     77A21C307FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 195
+    VOLKSWAGEN_RANGE_V2: 195
 - response: |-
     77A100A622AB600C800
     77A21C807FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 200
+    VOLKSWAGEN_RANGE_V2: 200
 - response: |-
     77A100A622AB600CD00
     77A21CD07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 205
+    VOLKSWAGEN_RANGE_V2: 205
 - response: |-
     77A100A622AB600D200
     77A21D207FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 210
+    VOLKSWAGEN_RANGE_V2: 210
 - response: |-
     77A100A622AB600DC00
     77A21DC07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 220
+    VOLKSWAGEN_RANGE_V2: 220
+- response: |-
+    77A100A622AB600E100
+    77A21E107FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 225
+- response: |-
+    77A100A622AB600E600
+    77A21E607FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 230
+- response: |-
+    77A100A622AB600EB00
+    77A21EB07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 235
 - response: |-
     77A100A622AB600F000
     77A21F007FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 240
+    VOLKSWAGEN_RANGE_V2: 240
 - response: |-
     77A100A622AB600F500
     77A21F507FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 245
+    VOLKSWAGEN_RANGE_V2: 245
+- response: |-
+    77A100A622AB600FA00
+    77A21FA07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 250
+- response: |-
+    77A100A622AB600FF00
+    77A21FF07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 255
+- response: |-
+    77A100A622AB6010401
+    77A210407FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 260
+- response: |-
+    77A100A622AB6010901
+    77A210907FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 265
+- response: |-
+    77A100A622AB6010E01
+    77A210E07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 270
+- response: |-
+    77A100A622AB6011301
+    77A211307FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 275
+- response: |-
+    77A100A622AB6011801
+    77A211807FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 280
+- response: |-
+    77A100A622AB6011D01
+    77A211D07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 285
+- response: |-
+    77A100A622AB6012201
+    77A212207FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 290
+- response: |-
+    77A100A622AB6012701
+    77A212707FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 295
+- response: |-
+    77A100A622AB6012C01
+    77A212C07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 300
 - response: |-
     77A100A622AB6013101
     77A213107FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 305
+    VOLKSWAGEN_RANGE_V2: 305
+- response: |-
+    77A100A622AB6013601
+    77A213607FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 310
+- response: |-
+    77A100A622AB6013B01
+    77A213B07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 315
+- response: |-
+    77A100A622AB6014001
+    77A214007FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 320
+- response: |-
+    77A100A622AB6014501
+    77A214507FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 325
+- response: |-
+    77A100A622AB6014A01
+    77A214A07FD01555555
+  expected_values:
+    VOLKSWAGEN_RANGE_V2: 330
 - response: |-
     77A100A622AB6014F01
     77A214F07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 335
+    VOLKSWAGEN_RANGE_V2: 335
 - response: |-
     77A100A622AB6015401
     77A215407FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 340
+    VOLKSWAGEN_RANGE_V2: 340
 - response: |-
     77A100A622AB6015901
     77A215907FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 345
+    VOLKSWAGEN_RANGE_V2: 345
 - response: |-
     77A100A622AB6015E01
     77A215E07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 350
+    VOLKSWAGEN_RANGE_V2: 350
 - response: |-
     77A100A622AB6016301
     77A216307FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 355
+    VOLKSWAGEN_RANGE_V2: 355
 - response: |-
     77A100A622AB6016801
     77A216807FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 360
+    VOLKSWAGEN_RANGE_V2: 360
 - response: |-
     77A100A622AB6016D01
     77A216D07FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 365
+    VOLKSWAGEN_RANGE_V2: 365
 - response: |-
     77A100A622AB6017201
     77A217207FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 370
+    VOLKSWAGEN_RANGE_V2: 370
 - response: |-
     77A100A622AB6017701
     77A217707FD01555555
   expected_values:
-    VOLKSWAGEN_RANGE: 375
+    VOLKSWAGEN_RANGE_V2: 375
