--- a/tests/test_cases/2018/commands/710.77A.222A0B.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A0B.yaml
@@ -5,6 +5,12 @@ test_cases:
 - response: 77A04622A0B33
   expected_values:
     VOLKSWAGEN_SSB_T: 11
+- response: 77A04622A0B34
+  expected_values:
+    VOLKSWAGEN_SSB_T: 12
+- response: 77A04622A0B36
+  expected_values:
+    VOLKSWAGEN_SSB_T: 14
 - response: 77A04622A0B3C
   expected_values:
     VOLKSWAGEN_SSB_T: 20
