--- a/tests/test_cases/2018/commands/7E0.7E8.22028D.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.22028D.yaml
@@ -26,6 +26,9 @@ test_cases:
 - response: 7E80562028D012C
   expected_values:
     VOLKSWAGEN_ECU_TEMP: 30
+- response: 7E80562028D0136
+  expected_values:
+    VOLKSWAGEN_ECU_TEMP: 31
 - response: 7E80562028D014A
   expected_values:
     VOLKSWAGEN_ECU_TEMP: 33
