--- a/tests/test_cases/2018/commands/7E0.7E8.222061.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.222061.yaml
@@ -5,6 +5,9 @@ test_cases:
 - response: 7E80562206102DC
   expected_values:
     VOLKSWAGEN_APP_POS1: 0.732
+- response: 7E80562206102E1
+  expected_values:
+    VOLKSWAGEN_APP_POS1: 0.737
 - response: 7E80562206102E6
   expected_values:
     VOLKSWAGEN_APP_POS1: 0.742
@@ -20,6 +23,9 @@ test_cases:
 - response: 7E80562206104D3
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.235
+- response: 7E80562206104FF
+  expected_values:
+    VOLKSWAGEN_APP_POS1: 1.279
 - response: '7E8056220610518'
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.304
@@ -32,6 +38,9 @@ test_cases:
 - response: 7E80562206105C3
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.475
+- response: 7E80562206105CC
+  expected_values:
+    VOLKSWAGEN_APP_POS1: 1.484
 - response: 7E805622061061B
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.563
@@ -50,6 +59,9 @@ test_cases:
 - response: '7E8056220610699'
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.689
+- response: 7E80562206106EC
+  expected_values:
+    VOLKSWAGEN_APP_POS1: 1.772
 - response: '7E8056220610758'
   expected_values:
     VOLKSWAGEN_APP_POS1: 1.88
