--- a/tests/test_cases/2018/commands/7E0.7E8.22F40D.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.22F40D.yaml
@@ -17,12 +17,18 @@ test_cases:
 - response: 7E80462F40D16
   expected_values:
     VOLKSWAGEN_VSS: 22
+- response: 7E80462F40D20
+  expected_values:
+    VOLKSWAGEN_VSS: 32
 - response: 7E80462F40D26
   expected_values:
     VOLKSWAGEN_VSS: 38
 - response: 7E80462F40D28
   expected_values:
     VOLKSWAGEN_VSS: 40
+- response: 7E80462F40D29
+  expected_values:
+    VOLKSWAGEN_VSS: 41
 - response: 7E80462F40D2E
   expected_values:
     VOLKSWAGEN_VSS: 46
@@ -44,6 +50,12 @@ test_cases:
 - response: 7E80462F40D3E
   expected_values:
     VOLKSWAGEN_VSS: 62
+- response: 7E80462F40D48
+  expected_values:
+    VOLKSWAGEN_VSS: 72
+- response: 7E80462F40D4B
+  expected_values:
+    VOLKSWAGEN_VSS: 75
 - response: 7E80462F40D4E
   expected_values:
     VOLKSWAGEN_VSS: 78
