--- a/tests/test_cases/2018/commands/7E0.7E8.22F442.yaml
+++ b/tests/test_cases/2018/commands/7E0.7E8.22F442.yaml
@@ -41,6 +41,9 @@ test_cases:
 - response: 7E80562F442399A
   expected_values:
     VOLKSWAGEN_VPWR: 14.746
+- response: 7E80562F44239AD
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.765
 - response: 7E80562F44239C1
   expected_values:
     VOLKSWAGEN_VPWR: 14.785
@@ -50,3 +53,6 @@ test_cases:
 - response: 7E80562F44239E8
   expected_values:
     VOLKSWAGEN_VPWR: 14.824
+- response: 7E80562F44239FB
+  expected_values:
+    VOLKSWAGEN_VPWR: 14.843
