--- a/tests/test_cases/2024/commands/7E0.0142.yaml
+++ b/tests/test_cases/2024/commands/7E0.0142.yaml
@@ -2,6 +2,12 @@ command_id: 7E0.0142
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80441422E01
+  expected_values:
+    VPWR: 11.777
+- response: 7E80441422E14
+  expected_values:
+    VPWR: 11.796
 - response: 7E80441422E28
   expected_values:
     VPWR: 11.816
@@ -14,6 +20,12 @@ test_cases:
 - response: 7E80441422E63
   expected_values:
     VPWR: 11.875
+- response: 7E80441422E76
+  expected_values:
+    VPWR: 11.894
+- response: 7E80441422E8A
+  expected_values:
+    VPWR: 11.914
 - response: 7E80441422E9D
   expected_values:
     VPWR: 11.933
@@ -26,6 +38,9 @@ test_cases:
 - response: 7E80441422ED8
   expected_values:
     VPWR: 11.992
+- response: 7E80441422EEB
+  expected_values:
+    VPWR: 12.011
 - response: 7E80441422EFF
   expected_values:
     VPWR: 12.031
@@ -89,6 +104,9 @@ test_cases:
 - response: '7E80441423085'
   expected_values:
     VPWR: 12.421
+- response: '7E80441423099'
+  expected_values:
+    VPWR: 12.441
 - response: 7E804414230AC
   expected_values:
     VPWR: 12.46
@@ -98,9 +116,21 @@ test_cases:
 - response: 7E8044142310E
   expected_values:
     VPWR: 12.558
+- response: '7E80441423135'
+  expected_values:
+    VPWR: 12.597
 - response: '7E80441423149'
   expected_values:
     VPWR: 12.617
+- response: '7E80441423170'
+  expected_values:
+    VPWR: 12.656
+- response: '7E80441423183'
+  expected_values:
+    VPWR: 12.675
+- response: '7E80441423281'
+  expected_values:
+    VPWR: 12.929
 - response: 7E804414232BC
   expected_values:
     VPWR: 12.988
@@ -155,12 +185,18 @@ test_cases:
 - response: '7E80441423442'
   expected_values:
     VPWR: 13.378
+- response: 7E8044142347D
+  expected_values:
+    VPWR: 13.437
 - response: 7E804414234CB
   expected_values:
     VPWR: 13.515
 - response: '7E80441423519'
   expected_values:
     VPWR: 13.593
+- response: '7E80441423540'
+  expected_values:
+    VPWR: 13.632
 - response: 7E804414235A2
   expected_values:
     VPWR: 13.73
@@ -173,6 +209,9 @@ test_cases:
 - response: 7E804414235DD
   expected_values:
     VPWR: 13.789
+- response: 7E804414235F0
+  expected_values:
+    VPWR: 13.808
 - response: '7E80441423604'
   expected_values:
     VPWR: 13.828
@@ -203,12 +242,18 @@ test_cases:
 - response: 7E804414236C7
   expected_values:
     VPWR: 14.023
+- response: 7E804414236DA
+  expected_values:
+    VPWR: 14.042
 - response: 7E804414236EE
   expected_values:
     VPWR: 14.062
 - response: '7E80441423702'
   expected_values:
     VPWR: 14.082
+- response: '7E80441423715'
+  expected_values:
+    VPWR: 14.101
 - response: '7E80441423729'
   expected_values:
     VPWR: 14.121
@@ -236,12 +281,27 @@ test_cases:
 - response: 7E804414237C5
   expected_values:
     VPWR: 14.277
+- response: 7E804414237D8
+  expected_values:
+    VPWR: 14.296
 - response: 7E804414237EC
   expected_values:
     VPWR: 14.316
 - response: 7E804414237FF
   expected_values:
     VPWR: 14.335
+- response: '7E80441423813'
+  expected_values:
+    VPWR: 14.355
+- response: '7E80441423827'
+  expected_values:
+    VPWR: 14.375
+- response: 7E8044142383A
+  expected_values:
+    VPWR: 14.394
+- response: 7E8044142384E
+  expected_values:
+    VPWR: 14.414
 - response: '7E80441423861'
   expected_values:
     VPWR: 14.433
@@ -323,63 +383,27 @@ test_cases:
 - response: 7E80441423A84
   expected_values:
     VPWR: 14.98
+- response: 7E80441423A98
+  expected_values:
+    VPWR: 15
 - response: 7E80441423AAB
   expected_values:
     VPWR: 15.019
 - response: 7E80441423ABF
   expected_values:
     VPWR: 15.039
+- response: 7E80441423B5B
+  expected_values:
+    VPWR: 15.195
+- response: 7E80441423B82
+  expected_values:
+    VPWR: 15.234
 - response: 7E80441423B95
   expected_values:
     VPWR: 15.253
-- response: 7EC0441422E8A
+- response: 7E80441423BE4
   expected_values:
-    VPWR: 11.914
-- response: 7EC0441422EFF
+    VPWR: 15.332
+- response: 7E80441423BF7
   expected_values:
-    VPWR: 12.031
-- response: 7EC0441422F26
-  expected_values:
-    VPWR: 12.07
-- response: 7EC0441422F74
-  expected_values:
-    VPWR: 12.148
-- response: 7EC0441422F9B
-  expected_values:
-    VPWR: 12.187
-- response: 7EC0441422FE9
-  expected_values:
-    VPWR: 12.265
-- response: 7EC044142305E
-  expected_values:
-    VPWR: 12.382
-- response: 7EC0441423281
-  expected_values:
-    VPWR: 12.929
-- response: 7EC0441423456
-  expected_values:
-    VPWR: 13.398
-- response: 7EC0441423567
-  expected_values:
-    VPWR: 13.671
-- response: 7EC044142358E
-  expected_values:
-    VPWR: 13.71
-- response: 7EC044142362B
-  expected_values:
-    VPWR: 13.867
-- response: 7EC0441423652
-  expected_values:
-    VPWR: 13.906
-- response: 7EC0441423679
-  expected_values:
-    VPWR: 13.945
-- response: 7EC04414236A0
-  expected_values:
-    VPWR: 13.984
-- response: 7EC04414236C7
-  expected_values:
-    VPWR: 14.023
-- response: 7EC04414236EE
-  expected_values:
-    VPWR: 14.062
+    VPWR: 15.351
