--- a/tests/test_cases/2024/commands/710.77A.222AB8.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB8.yaml
@@ -8,10 +8,15 @@ test_cases:
   expected_values:
     VOLKSWAGEN_HVBAT_KWH: 6.84974
 - response: |-
-    77A100B622AB801FF00
+    77A100B622AB800FF00
     77A2100000000005555
   expected_values:
-    VOLKSWAGEN_HVBAT_KWH: 25.54903
+    VOLKSWAGEN_HVBAT_KWH: 12.74951
+- response: |-
+    77A100B622AB8010000
+    77A2100000000005555
+  expected_values:
+    VOLKSWAGEN_HVBAT_KWH: 12.79951
 - response: |-
     77A100B622AB8020000
     77A2100000000005555
