--- a/tests/test_cases/2018/commands/710.77A.222A0B.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A0B.yaml
@@ -11,12 +11,18 @@ test_cases:
 - response: 77A04622A0B36
   expected_values:
     VOLKSWAGEN_SSB_T: 14
+- response: 77A04622A0B3B
+  expected_values:
+    VOLKSWAGEN_SSB_T: 19
 - response: 77A04622A0B3C
   expected_values:
     VOLKSWAGEN_SSB_T: 20
 - response: 77A04622A0B41
   expected_values:
     VOLKSWAGEN_SSB_T: 25
+- response: 77A04622A0B44
+  expected_values:
+    VOLKSWAGEN_SSB_T: 28
 - response: 77A04622A0B48
   expected_values:
     VOLKSWAGEN_SSB_T: 32
