--- a/tests/test_cases/2018/commands/710.77A.222A0C.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A0C.yaml
@@ -5,9 +5,15 @@ test_cases:
 - response: 77A04622A0C37
   expected_values:
     VOLKSWAGEN_SSB_SOC: 55
+- response: 77A04622A0C38
+  expected_values:
+    VOLKSWAGEN_SSB_SOC: 56
 - response: 77A04622A0C39
   expected_values:
     VOLKSWAGEN_SSB_SOC: 57
 - response: 77A04622A0C3A
   expected_values:
     VOLKSWAGEN_SSB_SOC: 58
+- response: 77A04622A0C3B
+  expected_values:
+    VOLKSWAGEN_SSB_SOC: 59
