--- a/tests/test_cases/2018/commands/710.77A.222A0E.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A0E.yaml
@@ -2,6 +2,9 @@ command_id: 710.77A.222A0E
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 77A04622A0E1F
+  expected_values:
+    VOLKSWAGEN_SSB_R: 6.2
 - response: 77A04622A0E20
   expected_values:
     VOLKSWAGEN_SSB_R: 6.4
