--- a/tests/test_cases/2018/commands/710.77A.222A0F.yaml
+++ b/tests/test_cases/2018/commands/710.77A.222A0F.yaml
@@ -20,3 +20,12 @@ test_cases:
 - response: 77A04622A0F18
   expected_values:
     VOLKSWAGEN_SSB_AH: 24
+- response: 77A04622A0F19
+  expected_values:
+    VOLKSWAGEN_SSB_AH: 25
+- response: 77A04622A0F1A
+  expected_values:
+    VOLKSWAGEN_SSB_AH: 26
+- response: 77A04622A0F1B
+  expected_values:
+    VOLKSWAGEN_SSB_AH: 27
