--- a/tests/test_cases/2024/commands/7E0.0142.yaml
+++ b/tests/test_cases/2024/commands/7E0.0142.yaml
@@ -2,6 +2,9 @@ command_id: 7E0.0142
 can_id_format: ELEVEN_BIT
 extended_addressing_enabled: false
 test_cases:
+- response: 7E80441422A09
+  expected_values:
+    VPWR: 10.761
 - response: 7E80441422E01
   expected_values:
     VPWR: 11.777
