--- a/tests/test_cases/2021/command_support.yaml
+++ b/tests/test_cases/2021/command_support.yaml
@@ -18,6 +18,7 @@ supported_commands_by_ecu:
   - 0111:TP
   - 0113:O2S11_EXISTS,O2S12_EXISTS,O2S13_EXISTS,O2S14_EXISTS,O2S21_EXISTS,O2S22_EXISTS,O2S23_EXISTS,O2S24_EXISTS
   - 0115:O2S12,SHRTFT11
+  - 0119:O2S22,SHRTFT22
   - 011C:OBDSUP
   - 011F:RUNTM
   - 0121:MIL_DIST
@@ -27,6 +28,7 @@ supported_commands_by_ecu:
   - 0130:WARM_UPS
   - 0131:CLR_DIST
   - 0133:BARO
+  - 0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 013C:CATEMP11
   - 013D:CATEMP21
   - 0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
@@ -83,16 +85,20 @@ unsupported_commands_by_ecu:
   - 70B.2218A3|fc=1:VOLKSWAGEN_TID_4,VOLKSWAGEN_TPOS_4,VOLKSWAGEN_TPS_4,VOLKSWAGEN_TPW_4,VOLKSWAGEN_TP_4,VOLKSWAGEN_TP_RR,VOLKSWAGEN_TT_4
   "710":
   - 710.222A0A:VOLKSWAGEN_ODO_2,VOLKSWAGEN_SSB_SENSOR_T
+  - 710.77A.222A00|fc=1:VOLKSWAGEN_SSB_VT
   - 710.77A.222A07:VOLKSWAGEN_SSB_V
+  - 710.77A.222A09:VOLKSWAGEN_SSB_C
   - 710.77A.222A0B:VOLKSWAGEN_SSB_T
   - 710.77A.222A0C:VOLKSWAGEN_SSB_SOC
   - 710.77A.222A0E:VOLKSWAGEN_SSB_R
   - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
   - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
+  - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
   - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
+  - 710.77A.222AF7|fc=1:VOLKSWAGEN_AUX_BAT_AGE_CAP,VOLKSWAGEN_AUX_BAT_AGE_POW,VOLKSWAGEN_AUX_BAT_C,VOLKSWAGEN_AUX_BAT_CAP,VOLKSWAGEN_AUX_BAT_CHRG_TOT,VOLKSWAGEN_AUX_BAT_DSCH_TOT,VOLKSWAGEN_AUX_BAT_SOC,VOLKSWAGEN_AUX_BAT_T,VOLKSWAGEN_AUX_BAT_T_S,VOLKSWAGEN_AUX_BAT_V
   "713":
   - 713.221800:VOLKSWAGEN_FL_VSS
   - 713.221801:VOLKSWAGEN_FR_VSS
@@ -123,11 +129,15 @@ unsupported_commands_by_ecu:
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_WNDSHLD_TEMP
+  - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
+  "767":
+  - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
+  - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
   - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
@@ -155,10 +165,12 @@ unsupported_commands_by_ecu:
   - 7E1.222B1E:VOLKSWAGEN_TIRE_RR_SPD
   - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
   - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
+  - 7E1.7E9.220805:VOLKSWAGEN_BRAKE_LIGHT_ON,VOLKSWAGEN_BRAKE_LIGHT_ON_VALID,VOLKSWAGEN_BRAKE_PRESSED,VOLKSWAGEN_BRAKE_PRESSED_VALID
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221002:VOLKSWAGEN_TIRE_FL_SPD_V2
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
+  - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
   - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
   - 7E5.7ED.22028C:VOLKSWAGEN_HVBAT_SOC
