Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AF7|fc=1.yaml
@@ -385,6 +385,22 @@ test_cases:
     77A221716000168E000
     77A2301672740504455
 - expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 57
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 67
+    VOLKSWAGEN_AUX_BAT_C: -17.552
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 11405.7
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 11332.2
+    VOLKSWAGEN_AUX_BAT_SOC: 68
+    VOLKSWAGEN_AUX_BAT_T: 22
+    VOLKSWAGEN_AUX_BAT_T_S: 23
+    VOLKSWAGEN_AUX_BAT_V: 12.261
+  response: |-
+    77A101A622AF72045FF
+    77A21FFBB701A443E3F
+    77A22181A0001BD8900
+    77A2301BAAA39434455
+- expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 90
     VOLKSWAGEN_AUX_BAT_AGE_POW: 96
     VOLKSWAGEN_AUX_BAT_C: -33.96
