--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -1,18 +1,32 @@
-model_year: 2021
+model_year: 2025
 supported_commands_by_ecu:
+  "710":
+  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP
+  - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
+  - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
+  - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
+  - 710.77A.222AF7|fc=1:VOLKSWAGEN_AUX_BAT_AGE_CAP,VOLKSWAGEN_AUX_BAT_AGE_POW,VOLKSWAGEN_AUX_BAT_C,VOLKSWAGEN_AUX_BAT_CAP,VOLKSWAGEN_AUX_BAT_CHRG_TOT,VOLKSWAGEN_AUX_BAT_DSCH_TOT,VOLKSWAGEN_AUX_BAT_SOC,VOLKSWAGEN_AUX_BAT_T,VOLKSWAGEN_AUX_BAT_T_S,VOLKSWAGEN_AUX_BAT_V
+  "714":
+  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
+  "746":
+  - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
+  "767":
+  - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
-  - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
-  - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
-  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
-  - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
-  - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
-  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
-  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
-  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
-  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
-  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
-  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
+  - 7E0.0103:FUELSYS1,FUELSYS2
+  - 7E0.010D:VSS
+  - 7E0.011C:OBDSUP
+  - 7E0.012F:FLI
+  - 7E0.0131:CLR_DIST
+  - 7E0.0142:VPWR
+  - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
+  - 7E0.019E:EXH_RATE
+  - 7E0.01A6:ODO
+  "7E1":
+  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
+  - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
+  - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
+  - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
 unsupported_commands_by_ecu:
   "70B":
   - 70B.2218A0|fc=1:VOLKSWAGEN_TID_1,VOLKSWAGEN_TPOS_1,VOLKSWAGEN_TPS_1,VOLKSWAGEN_TPW_1,VOLKSWAGEN_TP_1,VOLKSWAGEN_TP_FR,VOLKSWAGEN_TT_1
@@ -30,11 +44,6 @@ unsupported_commands_by_ecu:
   - 710.77A.222A0F:VOLKSWAGEN_SSB_AH
   - 710.77A.222A10:VOLKSWAGEN_SSB_V_REST
   - 710.77A.222A61|fc=1:VOLKSWAGEN_SSB_TOTAL_CHARGE,VOLKSWAGEN_SSB_TOTAL_DISCHARGE
-  - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP
-  - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
-  - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
-  - 710.77A.222AB8|fc=1:VOLKSWAGEN_HVBAT_KWH
-  - 710.77A.222AF7|fc=1:VOLKSWAGEN_AUX_BAT_AGE_CAP,VOLKSWAGEN_AUX_BAT_AGE_POW,VOLKSWAGEN_AUX_BAT_C,VOLKSWAGEN_AUX_BAT_CAP,VOLKSWAGEN_AUX_BAT_CHRG_TOT,VOLKSWAGEN_AUX_BAT_DSCH_TOT,VOLKSWAGEN_AUX_BAT_SOC,VOLKSWAGEN_AUX_BAT_T,VOLKSWAGEN_AUX_BAT_T_S,VOLKSWAGEN_AUX_BAT_V
   "713":
   - 713.221800:VOLKSWAGEN_FL_VSS
   - 713.221801:VOLKSWAGEN_FR_VSS
@@ -53,7 +62,6 @@ unsupported_commands_by_ecu:
   - 714.2222B0:VOLKSWAGEN_FLI_VOL
   - 714.222613:VOLKSWAGEN_IAT
   - 714.77E.220530|fc=1:VOLKSWAGEN_TRIP_USE_SHORT
-  - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
   - 714.77E.2222E0:VOLKSWAGEN_RANGE_DSP
   "715":
   - 715.222353:VOLKSWAGEN_CRASH_FRONT,VOLKSWAGEN_CRSH_FRONT
@@ -65,15 +73,15 @@ unsupported_commands_by_ecu:
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
   "746":
   - 746.2227C4|fc=1:VOLKSWAGEN_WNDSHLD_TEMP
-  - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
-  "767":
-  - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
   - 7E0.2211C4:VOLKSWAGEN_OIL_MAX
   - 7E0.2211C5:VOLKSWAGEN_OIL_MIN
+  - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
+  - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
   - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
+  - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
   - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
@@ -89,6 +97,15 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2211BB:VOLKSWAGEN_OIL_CRIT
   - 7E0.7E8.2211BD:VOLKSWAGEN_OIL_LEVEL_WARN
   - 7E0.7E8.2211BE:VOLKSWAGEN_EOT_V2
+  - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
+  - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
+  - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
+  - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
+  - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
+  - 7E0.7E8.22F431:VOLKSWAGEN_CLR_DIST
+  - 7E0.7E8.22F442:VOLKSWAGEN_VPWR
   "7E1":
   - 7E1.220302:VOLKSWAGEN_DRIVE_TIME
   - 7E1.220303:VOLKSWAGEN_DRIVE_TIME_ECO
@@ -99,15 +116,11 @@ unsupported_commands_by_ecu:
   - 7E1.222B1C:VOLKSWAGEN_TIRE_FR_SPD
   - 7E1.222B1D:VOLKSWAGEN_TIRE_RL_SPD
   - 7E1.222B1E:VOLKSWAGEN_TIRE_RR_SPD
-  - 7E1.223841:VOLKSWAGEN_ODO_TCM_1
-  - 7E1.223887:VOLKSWAGEN_ODO_TCM_2_HD
   - 7E1.7E9.220805:VOLKSWAGEN_BRAKE_LIGHT_ON,VOLKSWAGEN_BRAKE_LIGHT_ON_VALID,VOLKSWAGEN_BRAKE_PRESSED,VOLKSWAGEN_BRAKE_PRESSED_VALID
   - 7E1.7E9.221001:VOLKSWAGEN_TIRE_FR_SPD_V2
   - 7E1.7E9.221002:VOLKSWAGEN_TIRE_FL_SPD_V2
   - 7E1.7E9.221003:VOLKSWAGEN_TIRE_RR_SPD_V2
   - 7E1.7E9.221004:VOLKSWAGEN_TIRE_RL_SPD_V2
-  - 7E1.7E9.222104:VOLKSWAGEN_ATF_T
-  - 7E1.7E9.22210F:VOLKSWAGEN_GEAR,VOLKSWAGEN_GEAR_SHFT
   "7E5":
   - 7E5.7ED.22028C:VOLKSWAGEN_HVBAT_SOC
   - 7E5.7ED.221801:VOLKSWAGEN_HVBAT_VOLT
