--- a/tests/test_cases/2025/commands/7E0.012F.yaml
+++ b/tests/test_cases/2025/commands/7E0.012F.yaml
@@ -1,6 +1,12 @@
 command_id: 7E0.012F
 test_cases:
 - expected_values:
+    FLI: 78.82353
+  response: 7E803412FC9
+- expected_values:
+    FLI: 80
+  response: 7E803412FCC
+- expected_values:
     FLI: 81.17647
   response: 7E803412FCF
 - expected_values:
