Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AF7|fc=1.yaml
@@ -131,6 +131,22 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AUX_BAT_AGE_CAP: 69
     VOLKSWAGEN_AUX_BAT_AGE_POW: 86
+    VOLKSWAGEN_AUX_BAT_C: -18.436
+    VOLKSWAGEN_AUX_BAT_CAP: 68
+    VOLKSWAGEN_AUX_BAT_CHRG_TOT: 917.2
+    VOLKSWAGEN_AUX_BAT_DSCH_TOT: 889.8
+    VOLKSWAGEN_AUX_BAT_SOC: 73
+    VOLKSWAGEN_AUX_BAT_T: 25
+    VOLKSWAGEN_AUX_BAT_T_S: 26
+    VOLKSWAGEN_AUX_BAT_V: 12.437
+  response: |-
+    77A101A622AF720F5FF
+    77A21FFB7FC27494142
+    77A221213000023D400
+    77A230022C245564455
+- expected_values:
+    VOLKSWAGEN_AUX_BAT_AGE_CAP: 69
+    VOLKSWAGEN_AUX_BAT_AGE_POW: 86
     VOLKSWAGEN_AUX_BAT_C: -14.654
     VOLKSWAGEN_AUX_BAT_CAP: 68
     VOLKSWAGEN_AUX_BAT_CHRG_TOT: 916
