--- a/tests/test_cases/2025/commands/7E0.012F.yaml
+++ b/tests/test_cases/2025/commands/7E0.012F.yaml
@@ -1,6 +1,9 @@
 command_id: 7E0.012F
 test_cases:
 - expected_values:
+    FLI: 78.03922
+  response: 7E803412FC7
+- expected_values:
     FLI: 78.82353
   response: 7E803412FC9
 - expected_values:
