--- a/tests/test_cases/2025/commands/710.77A.222AB8|fc=1.yaml
+++ b/tests/test_cases/2025/commands/710.77A.222AB8|fc=1.yaml
@@ -1,12 +1,17 @@
 command_id: 710.77A.222AB8|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_HVBAT_KWH: 25.74902
+    VOLKSWAGEN_HVBAT_KWH: 25.49903
   response: |-
-    77A100B622AB8020300
+    77A100B622AB801FE00
     77A2100000000005555
 - expected_values:
-    VOLKSWAGEN_HVBAT_KWH: 28.64891
+    VOLKSWAGEN_HVBAT_KWH: 25.54903
   response: |-
-    77A100B622AB8023D00
+    77A100B622AB801FF00
+    77A2100000000005555
+- expected_values:
+    VOLKSWAGEN_HVBAT_KWH: 25.59902
+  response: |-
+    77A100B622AB8020000
     77A2100000000005555
