--- a/tests/test_cases/2024/commands/710.77A.222AB2|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB2|fc=1.yaml
@@ -2,4 +2,5 @@ command_id: 710.77A.222AB2|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_HVBAT_CAP: 327.38771
+    VOLKSWAGEN_HVBAT_E_MAX: 327400
   response: 77A07622AB219940100
