--- a/tests/test_cases/2025/commands/714.77E.221014|fc=1.yaml
+++ b/tests/test_cases/2025/commands/714.77E.221014|fc=1.yaml
@@ -4,5 +4,5 @@ test_cases:
     VOLKSWAGEN_AAT: 9.5
   response: '77E0462101477'
 - expected_values:
-    VOLKSWAGEN_AAT: 21
-  response: 77E046210148E
+    VOLKSWAGEN_AAT: 22.5
+  response: '77E0462101491'
