Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
@@ -3,13 +3,18 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB501E601
-    77A21E6000000000000
+    77A100D622AB501D801
+    77A21D8000000000000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
-    77A100D622AB501EF01
-    77A21EF000000000000
+    77A100D622AB501DF01
+    77A21DF000000000000
+- expected_values:
+    VOLKSWAGEN_RANGE_EST_CAN: 0
+  response: |-
+    77A100D622AB501E001
+    77A21E0000000000000
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
