--- a/tests/test_cases/2018/command_support.yaml
+++ b/tests/test_cases/2018/command_support.yaml
@@ -67,7 +67,7 @@ supported_commands_by_ecu:
   - 7E0.22295A:VOLKSWAGEN_ODO_2_V2,VOLKSWAGEN_ODO_V2
   - 7E0.7E8.22028D:VOLKSWAGEN_ECU_TEMP
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_V4
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
   - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
@@ -79,7 +79,7 @@ supported_commands_by_ecu:
   - 7E0.7E8.222005:VOLKSWAGEN_BRAKE_BST_P
   - 7E0.7E8.222061:VOLKSWAGEN_APP_POS1
   - 7E0.7E8.222062:VOLKSWAGEN_APP_POS2
-  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
   - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
@@ -121,7 +121,7 @@ unsupported_commands_by_ecu:
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
   - 713.77D.222B1E:VOLKSWAGEN_TIRE_RR_SPD_V3
-  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE
+  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE_V2
   "714":
   - '714.221014'
   - 714.22202F:VOLKSWAGEN_EOT
@@ -209,4 +209,4 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.2251E0:VOLKSWAGEN_HVBAT_SOH
   - 7E5.7ED.225200:VOLKSWAGEN_LAUNCH
   "FC00":
-  - FC00.22028C:VOLKSWAGEN_SOC
+  - FC00.22028C:VOLKSWAGEN_SOC_V2
