--- a/tests/test_cases/2024/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222613|fc=1.yaml
@@ -1,8 +1,8 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 20
+    VOLKSWAGEN_HVAC_IAT: 20
   response: 7B00562261300C8
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 32.2
+    VOLKSWAGEN_HVAC_IAT: 32.2
   response: 7B0056226130142
