--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -3,7 +3,7 @@ supported_commands_by_ecu:
   "710":
   - 710.77A.222A53|fc=1:VOLKSWAGEN_DCDC_I,VOLKSWAGEN_DCDC_I_RSV,VOLKSWAGEN_DCDC_V_LOW
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
-  - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_EST_INT
+  - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_RESERVE_EST
   - 710.77A.222AB5|fc=1:VOLKSWAGEN_RANGE_EST_CAN
   - 710.77A.222AB6|fc=1:VOLKSWAGEN_RANGE_V2
   - 710.77A.222AB7|fc=1:VOLKSWAGEN_AVG_CSMP_CAT0,VOLKSWAGEN_AVG_CSMP_CAT1,VOLKSWAGEN_AVG_CSMP_CAT2,VOLKSWAGEN_AVG_CSMP_CAT3,VOLKSWAGEN_AVG_CSMP_CAT4,VOLKSWAGEN_AVG_CSMP_CAT5,VOLKSWAGEN_AVG_CSMP_CAT6
@@ -13,7 +13,7 @@ supported_commands_by_ecu:
   - 714.77E.221014|fc=1:VOLKSWAGEN_AAT
   "746":
   - 746.7B0.222612|fc=1:VOLKSWAGEN_HVAC_EVAP_T
-  - 746.7B0.222613|fc=1:VOLKSWAGEN_HVAC_INTERIOR_T
+  - 746.7B0.222613|fc=1:VOLKSWAGEN_HVAC_IAT
   - 746.7B0.2226ED|fc=1:VOLKSWAGEN_AIR_POLUTION
   "767":
   - 767.7D1.222431|fc=1:VOLKSWAGEN_GPS_SATS_TRACKED,VOLKSWAGEN_GPS_SATS_VISIBLE
@@ -123,7 +123,7 @@ unsupported_commands_by_ecu:
   - 713.77D.222B1C:VOLKSWAGEN_TIRE_FR_SPD_V3
   - 713.77D.222B1D:VOLKSWAGEN_TIRE_RL_SPD_V3
   - 713.77D.222B1E:VOLKSWAGEN_TIRE_RR_SPD_V3
-  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE
+  - 713.77D.222B29:VOLKSWAGEN_STEER_ANGLE_V2
   "714":
   - 714.22202F:VOLKSWAGEN_EOT
   - 714.222203:VOLKSWAGEN_ODO,VOLKSWAGEN_ODO_DASH
@@ -148,7 +148,7 @@ unsupported_commands_by_ecu:
   - 742.7AC.2227D6|fc=1:VOLKSWAGEN_PTC_PUMP_PWR,VOLKSWAGEN_PTC_PUMP_RPM
   - 742.7AC.22475F|fc=1:VOLKSWAGEN_PTC_HTR_FLUID_T1,VOLKSWAGEN_PTC_HTR_FLUID_T2,VOLKSWAGEN_PTC_HTR_I
   "744":
-  - 744.7AE.221507|fc=1,din=03:VOLKSWAGEN_CHRGR_RAIL1_E,VOLKSWAGEN_CHRGR_RAIL2_E,VOLKSWAGEN_CHRGR_RAIL3_E
+  - 744.7AE.221507|fc=1:VOLKSWAGEN_CHRGR_RAIL1_E,VOLKSWAGEN_CHRGR_RAIL2_E,VOLKSWAGEN_CHRGR_RAIL3_E
   - 744.7AE.221529|fc=1,din=03:VOLKSWAGEN_CHRGR_PRX_V_CONN_B
   - 744.7AE.221553|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_I
   - 744.7AE.221554|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_HI_V
@@ -157,13 +157,13 @@ unsupported_commands_by_ecu:
   - 744.7AE.221559|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_V
   - 744.7AE.22155A|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_I
   - 744.7AE.2215D5|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_MAX
-  - 744.7AE.2215D6|fc=1,din=03:VOLKSWAGEN_CHRGR_EFFICIENCY
+  - 744.7AE.2215D6|fc=1:VOLKSWAGEN_CHRGR_EFFICIENCY
   - 744.7AE.2215E1|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_LOSS
-  - 744.7AE.2215E2|fc=1,din=03:VOLKSWAGEN_CHRGR_COOLANT_T
-  - 744.7AE.2215EE|fc=1,din=03:VOLKSWAGEN_CHRGR_DUR_TOTAL
+  - 744.7AE.2215E2|fc=1:VOLKSWAGEN_CHRGR_COOLANT_T
+  - 744.7AE.2215EE|fc=1:VOLKSWAGEN_CHRGR_DUR_TOTAL
   - 744.7AE.2215EF|fc=1,din=03:VOLKSWAGEN_CHRGR_E_TOTAL
   - 744.7AE.2215F7|fc=1,din=03:VOLKSWAGEN_CHRGR_3V_SUPPLY
-  - 744.7AE.221DA7|fc=1,din=03:VOLKSWAGEN_CHRGR_V_OUT
+  - 744.7AE.221DA7|fc=1:VOLKSWAGEN_CHRGR_V_OUT,VOLKSWAGEN_OBC_HIGH_V_OUTPUT
   - 744.7AE.221DD0|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_DISP
   - 744.7AE.221DD3|fc=1,din=03:VOLKSWAGEN_CHRGR_CHG_PWR_MAX
   - 744.7AE.224965|fc=1:VOLKSWAGEN_HVBAT_KWH_V2
@@ -173,7 +173,7 @@ unsupported_commands_by_ecu:
   - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
   - 746.7B0.222606|fc=1:VOLKSWAGEN_HVAC_FAN1_ACT,VOLKSWAGEN_HVAC_FAN2_ACT
   - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_T
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_AAT
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
@@ -184,7 +184,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.2208D2:VOLKSWAGEN_HVBAT_SOC_DISP_V2
   - 7E0.7E8.221002:VOLKSWAGEN_AC_COMP_T
   - 7E0.7E8.221004:VOLKSWAGEN_AAT_V2
-  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V3,VOLKSWAGEN_ODO_V3
+  - 7E0.7E8.2210E0:VOLKSWAGEN_ODO_2_V4,VOLKSWAGEN_ODO_V4
   - 7E0.7E8.221151:VOLKSWAGEN_EM_RPM_1
   - 7E0.7E8.221152:VOLKSWAGEN_EM_RPM_2
   - 7E0.7E8.221153:VOLKSWAGEN_EM_TORQ_1
@@ -206,7 +206,7 @@ unsupported_commands_by_ecu:
   - 7E0.7E8.22395E:VOLKSWAGEN_ENG_BRAKE_PUMP
   - 7E0.7E8.223DF8:VOLKSWAGEN_ENG_MOTOR_RPM
   - 7E0.7E8.224380:VOLKSWAGEN_ENG_TRQ_REQ_2
-  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS
+  - 7E0.7E8.22F40D:VOLKSWAGEN_VSS_V2
   - 7E0.7E8.22F41F:VOLKSWAGEN_RUNTM
   - 7E0.7E8.22F421:VOLKSWAGEN_MIL_DIST
   - 7E0.7E8.22F430:VOLKSWAGEN_WARM_UPS
@@ -331,4 +331,4 @@ unsupported_commands_by_ecu:
   - 7E5.7ED.225200:VOLKSWAGEN_LAUNCH
   - 7E5.7ED.22F45B|din=03:VOLKSWAGEN_BMS_SOC_HIRES
   "FC00":
-  - FC00.22028C:VOLKSWAGEN_SOC
+  - FC00.22028C:VOLKSWAGEN_SOC_V2
