--- a/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
@@ -1,20 +1,20 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 31.5
+    VOLKSWAGEN_HVAC_IAT: 31.5
   response: 7B005622613013B
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 31.6
+    VOLKSWAGEN_HVAC_IAT: 31.6
   response: 7B005622613013C
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 31.7
+    VOLKSWAGEN_HVAC_IAT: 31.7
   response: 7B005622613013D
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 31.8
+    VOLKSWAGEN_HVAC_IAT: 31.8
   response: 7B005622613013E
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 31.9
+    VOLKSWAGEN_HVAC_IAT: 31.9
   response: 7B005622613013F
 - expected_values:
-    VOLKSWAGEN_HVAC_INTERIOR_T: 32
+    VOLKSWAGEN_HVAC_IAT: 32
   response: 7B0056226130140
