--- a/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
@@ -18,3 +18,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_HVAC_IAT: 32
   response: 7B0056226130140
+- expected_values:
+    VOLKSWAGEN_HVAC_IAT: 32.1
+  response: 7B0056226130141
