--- a/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
@@ -12,3 +12,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.3
   response: 7B0046226ED03
+- expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 1.4
+  response: 7B0046226ED0E
