--- a/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
+++ b/tests/test_cases/2024/commands/710.77A.222AB5|fc=1.yaml
@@ -3,6 +3,11 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RANGE_EST_CAN: 0
   response: |-
+    77A100D622AB5019201
+    77A2192000000000000
+- expected_values:
+    VOLKSWAGEN_RANGE_EST_CAN: 0
+  response: |-
     77A100D622AB501CF01
     77A21CF000000000000
 - expected_values:
