Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2025/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260A|fc=1.yaml
@@ -3,3 +3,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AAT_CABIN: 16
   response: 7B00462260A84
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 18
+  response: 7B00462260A88
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 19
+  response: 7B00462260A8A
