--- a/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
@@ -7,5 +7,11 @@ test_cases:
     VOLKSWAGEN_FRONT_LEFT_DEFL_T: 39.96
   response: 7B00462260C78
 - expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 40.626
+  response: 7B00462260C7A
+- expected_values:
     VOLKSWAGEN_FRONT_LEFT_DEFL_T: 41.292
   response: 7B00462260C7C
+- expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 41.958
+  response: 7B00462260C7E
