--- a/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.222613|fc=1.yaml
@@ -1,6 +1,9 @@
 command_id: 746.7B0.222613|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_HVAC_IAT: 31.4
+  response: 7B005622613013A
+- expected_values:
     VOLKSWAGEN_HVAC_IAT: 31.5
   response: 7B005622613013B
 - expected_values:
