--- a/tests/test_cases/2025/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260A|fc=1.yaml
@@ -9,3 +9,21 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_AAT_CABIN: 19
   response: 7B00462260A8A
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 19.5
+  response: 7B00462260A8B
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 20
+  response: 7B00462260A8C
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 20.5
+  response: 7B00462260A8D
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 22
+  response: 7B00462260A90
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 22.5
+  response: 7B00462260A91
+- expected_values:
+    VOLKSWAGEN_AAT_CABIN: 23
+  response: 7B00462260A92
