--- a/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22260C|fc=1.yaml
@@ -1,6 +1,18 @@
 command_id: 746.7B0.22260C|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 35.298
+  response: 7B00462260C6A
+- expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 35.964
+  response: 7B00462260C6C
+- expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 36.63
+  response: 7B00462260C6E
+- expected_values:
+    VOLKSWAGEN_FRONT_LEFT_DEFL_T: 37.296
+  response: 7B00462260C70
+- expected_values:
     VOLKSWAGEN_FRONT_LEFT_DEFL_T: 38.628
   response: 7B00462260C74
 - expected_values:
