--- a/tests/test_cases/2025/commands/746.7B0.22261E|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.22261E|fc=1.yaml
@@ -4,3 +4,7 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 0
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 80
   response: 7B00662261E005000
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 100
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 174
+  response: 7B00662261E00AEC8
