--- a/tests/test_cases/2025/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
+++ b/tests/test_cases/2025/commands/FC00.FE0076.22295A|ta=76,c=17.yaml
@@ -6,3 +6,9 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_ENG_ODO: 4513
   response: 17FE00760662295A0011A1
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 4520
+  response: 17FE00760662295A0011A8
+- expected_values:
+    VOLKSWAGEN_ENG_ODO: 4521
+  response: 17FE00760662295A0011A9
