Update command data for Volkswagen/Atlas

--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -1,6 +1,7 @@
 model_year: 2024
 supported_commands_by_ecu:
   "710":
+  - 710.77A.2215D1|fc=1:VOLKSWAGEN_HV_EM_HVBAT_ENERGY_INFORMATION,VOLKSWAGEN_HV_EM_NV_PWR_LIMITATION,VOLKSWAGEN_HV_EM_PWR_LIMITATION,VOLKSWAGEN_NV_ENERGY_REQUIREMENT
   - 710.77A.222A53|fc=1:VOLKSWAGEN_DCDC_I,VOLKSWAGEN_DCDC_I_RSV,VOLKSWAGEN_DCDC_V_LOW
   - 710.77A.222AB2|fc=1:VOLKSWAGEN_HVBAT_CAP,VOLKSWAGEN_HVBAT_E_MAX
   - 710.77A.222AB4|fc=1:VOLKSWAGEN_HVBAT_CSMP_AVG_INT,VOLKSWAGEN_RANGE_RESERVE_EST
@@ -206,7 +207,7 @@ unsupported_commands_by_ecu:
   - 746.2227C4|fc=1:VOLKSWAGEN_HVAC_INSIDE_HUM,VOLKSWAGEN_WNDSHLD_TEMP
   - 746.7B0.222604|fc=1:VOLKSWAGEN_HVAC_AC_LOAD
   - 746.7B0.222607|fc=1:VOLKSWAGEN_HVAC_FAN_CMD
-  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_AAT
+  - 746.7B0.222609|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_T
   - 746.7B0.2227C3|fc=1:VOLKSWAGEN_HVAC_OUTSIDE_HUM
   "7E0":
   - 7E0.2211BA:VOLKSWAGEN_OIL_LEVEL
