--- a/tests/test_cases/2024/commands/746.7B0.22261E|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22261E|fc=1.yaml
@@ -9,6 +9,10 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 83
   response: 7B00662261E005302
 - expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 20
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 100
+  response: 7B00662261E006428
+- expected_values:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 31.5
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 110
   response: 7B00662261E006E3F
@@ -16,6 +20,10 @@ test_cases:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 36
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 114
   response: 7B00662261E007248
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 100
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 170
+  response: 7B00662261E00AAC8
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 100
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 172
