--- a/tests/test_cases/2024/command_support.yaml
+++ b/tests/test_cases/2024/command_support.yaml
@@ -103,6 +103,7 @@ supported_commands_by_ecu:
   - 7E0.0130:WARM_UPS
   - 7E0.0131:CLR_DIST
   - 7E0.0133:BARO
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.013C:CATEMP11
   - 7E0.0141:ACRFCMPL,ACRF_ENA,AIR_CMPL,AIR_ENA,CAT_CMPL,CAT_ENA,CCM_CMPL,CCM_ENA,CIM_SUP_FLAG,EGR_CMPL,EGR_ENA,EVAPCMPL,EVAP_ENA,FUEL_CMPL,FUEL_ENA,HCATCMPL,HCAT_ENA,HTR_CMPL,HTR_ENA,MIS_CMPL,MIS_ENA,O2S_CMPL,O2S_ENA
   - 7E0.0142:VPWR
@@ -208,6 +209,7 @@ unsupported_commands_by_ecu:
   "744":
   - 744.7AE.22103D|fc=1:VOLKSWAGEN_OBC_HVDC_C
   - 744.7AE.22103E|fc=1:VOLKSWAGEN_OBC_CYCLE_ENERGY
+  - 744.7AE.221507
   - 744.7AE.221507|fc=1:VOLKSWAGEN_CHRGR_RAIL1_E,VOLKSWAGEN_CHRGR_RAIL2_E,VOLKSWAGEN_CHRGR_RAIL3_E
   - 744.7AE.221525|fc=1:VOLKSWAGEN_OBC_V_PROX_A
   - 744.7AE.221529|fc=1,din=03:VOLKSWAGEN_CHRGR_PRX_V_CONN_B
@@ -218,12 +220,16 @@ unsupported_commands_by_ecu:
   - 744.7AE.221559|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_V
   - 744.7AE.22155A|fc=1,din=03:VOLKSWAGEN_CHRGR_BOOST_CMD_I
   - 744.7AE.2215D5|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_MAX
+  - 744.7AE.2215D6
   - 744.7AE.2215D6|fc=1:VOLKSWAGEN_CHRGR_EFFICIENCY
   - 744.7AE.2215E1|fc=1,din=03:VOLKSWAGEN_CHRGR_PWR_LOSS
+  - 744.7AE.2215E2
   - 744.7AE.2215E2|fc=1:VOLKSWAGEN_CHRGR_COOLANT_T
+  - 744.7AE.2215EE
   - 744.7AE.2215EE|fc=1:VOLKSWAGEN_CHRGR_DUR_TOTAL
   - 744.7AE.2215EF|fc=1,din=03:VOLKSWAGEN_CHRGR_E_TOTAL
   - 744.7AE.2215F7|fc=1,din=03:VOLKSWAGEN_CHRGR_3V_SUPPLY
+  - 744.7AE.221DA7
   - 744.7AE.221DA7|fc=1:VOLKSWAGEN_CHRGR_V_OUT,VOLKSWAGEN_OBC_HIGH_V_OUTPUT
   - 744.7AE.221DD0|fc=1,din=03:VOLKSWAGEN_CHRGR_SOC_DISP
   - 744.7AE.221DD3|fc=1,din=03:VOLKSWAGEN_CHRGR_CHG_PWR_MAX
