--- a/tests/test_cases/2024/commands/746.7B0.22260A|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22260A|fc=1.yaml
@@ -1,6 +1,9 @@
 command_id: 746.7B0.22260A|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_AAT_CABIN: 6
+  response: 7B00462260A70
+- expected_values:
     VOLKSWAGEN_AAT_CABIN: 7
   response: 7B00462260A72
 - expected_values:
