--- a/tests/test_cases/2024/commands/746.7B0.22261E|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.22261E|fc=1.yaml
@@ -2,12 +2,24 @@ command_id: 746.7B0.22261E|fc=1
 test_cases:
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 0
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 81
+  response: 7B00662261E005100
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 0
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 82
   response: 7B00662261E005200
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 1
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 82
+  response: 7B00662261E005202
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 1
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 83
   response: 7B00662261E005302
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 2
+    VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 83
+  response: 7B00662261E005304
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_ACT_PCT: 20
     VOLKSWAGEN_RECIRC_FLAP_ACT_STEPS: 100
