--- a/tests/test_cases/2024/commands/746.7B0.222621|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222621|fc=1.yaml
@@ -3,3 +3,6 @@ test_cases:
 - expected_values:
     VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC: 170
   response: 7B00562262100AA
+- expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_STOP_RECIRC: 172
+  response: 7B00562262100AC
