--- a/tests/test_cases/2024/commands/746.7B0.222620|fc=1.yaml
+++ b/tests/test_cases/2024/commands/746.7B0.222620|fc=1.yaml
@@ -1,5 +1,8 @@
 command_id: 746.7B0.222620|fc=1
 test_cases:
 - expected_values:
+    VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH: 81
+  response: 7B0056226200051
+- expected_values:
     VOLKSWAGEN_RECIRC_FLAP_STOP_FRESH: 82
   response: 7B0056226200052
