--- a/tests/test_cases/2025/command_support.yaml
+++ b/tests/test_cases/2025/command_support.yaml
@@ -80,11 +80,16 @@ supported_commands_by_ecu:
   - 019E:EXH_RATE
   - 01A6:ODO
   - 7E0.0103:FUELSYS1,FUELSYS2
+  - 7E0.0104:LOAD_PCT
+  - 7E0.0105:ECT
+  - 7E0.0106:SHRTFT1
   - 7E0.010D:VSS
   - 7E0.011C:OBDSUP
   - 7E0.012F:FLI
   - 7E0.0131:CLR_DIST
+  - 7E0.0134:LAMBDA11_CURRENT,O2S11_CURRENT
   - 7E0.0142:VPWR
+  - 7E0.0144:EQ_RAT
   - 7E0.019D:FUEL_RATE_ALT,VFUEL_RATE
   - 7E0.019E:EXH_RATE
   - 7E0.01A6:ODO
