--- a/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
+++ b/tests/test_cases/2025/commands/746.7B0.2226ED|fc=1.yaml
@@ -13,6 +13,9 @@ test_cases:
     VOLKSWAGEN_AIR_POLUTION: 0.3
   response: 7B0046226ED03
 - expected_values:
+    VOLKSWAGEN_AIR_POLUTION: 0.5
+  response: 7B0046226ED05
+- expected_values:
     VOLKSWAGEN_AIR_POLUTION: 0.7
   response: 7B0046226ED07
 - expected_values:
